--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,6 @@ nav a:hover {
 
 
 .container{
-  
   display: grid;
   grid-template-rows: auto auto auto auto auto;
   grid-template-columns: 1fr 5fr 1fr;
@@ -115,80 +114,61 @@ header{
   height: 400px; /* Parallax effect */
 
   /* YOUR CODE HERE; */
-  grid-column-start: 1;
-  grid-column-end: 8;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  grid-column: 1 / -1;
+  grid-row: 1 / span 1;
   background-image: url("../images/header.jpg");
+  background-repeat: no-repeat;
 
 }
 
-
-
 .about-image{
-  grid-column-start: 1;
-  grid-column-end: 8;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-column: 1 / span 3;
+  grid-row: 2 /  span 1;
   max-height: 700px;
   overflow: hidden;
 }
 
 .about{
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-column: 2 / span 1;
+  grid-row: 2 / span 1;
 }
 
 .method-image{
-  grid-column-start: 1;
-  grid-column-end: 8;
-  grid-row-start: 3;
-  grid-row-end: 4;
+  grid-column: 1 / span 3;
+  grid-row: 3 / span 1;
   max-height: 700px;
   overflow: hidden;
 }
 
 .method{
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 4;
+  grid-column: 2 / span 1;
+  grid-row: 3 / span 1;
 }
 
 /* You need to write some of your own selectors here */
 
 .clients-image{
-  grid-column-start: 1;
-  grid-column-end: 8;
-  grid-row-start: 4;
-  grid-row-end: 5;
+  grid-column: 1 / span 3;
+  grid-row: 4 / span 1;
   max-height: 700px;
   overflow: hidden;
 }
 
 .clients{
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 4;
-  grid-row-end: 5;
+  grid-column: 2 / span 1;
+  grid-row: 4 / span 1;
 }
 
 .contact-image{
-  grid-column-start: 1;
-  grid-column-end: 8;
-  grid-row-start: 5;
-  grid-row-end: 6;
+  grid-column: 1 / span 3;
+  grid-row: 5 / span 1;
   max-height: 700px;
   overflow: hidden;
 }
 
 .contact{
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 5;
-  grid-row-end: 6;
+  grid-column: 2 / span 1;
+  grid-row: 5 / span 1;
 }
 
 
@@ -213,43 +193,35 @@ header{
   }
 
   .about-image{
-    grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column: 2 / span 2;
   }
 
   .about{
-    grid-column-start: 3;
-    grid-column-end: 5;
+    grid-column: 3 / span 2;
   }
 
   .method-image{
-    grid-column-start: 3;
-    grid-column-end: 5;
+    grid-column: 3 / span 2;
   }
 
   .method{
-    grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column: 2 / span 2;
   }
 
   .clients-image{
-    grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column: 2 / span 2;
   }
 
   .clients{
-    grid-column-start: 3;
-    grid-column-end: 5;
+    grid-column: 3 / span 2;
   }
 
   .contact-image{
-    grid-column-start: 3;
-    grid-column-end: 5;
+    grid-column: 3 / span 2;
   }
 
   .contact{
-    grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column: 2 / span 2;  
   }
 
 }
